[package]
name = "pkb"
version = "2.5.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
comrak = { version = "0.22.0", default-features = false, features = ["syntect"] }
deunicode = "1.4"
html5ever = "<0.26.0"
kuchiki = "0.8.1"
markup = { git = "https://github.com/wezm/markup.rs.git", rev = "19cfdf8" }
rocket = { version = "0.5.0", default-features = false }
sentry = { version = "0.32.2", default-features = false, features = ["backtrace", "contexts", "panic", "ureq"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.34"
sitemap = { git = "https://github.com/wezm/rust-sitemap-time.git", rev = "96d0d81" }
time = { version = "0.3.34", features = ["std", "formatting", "parsing", "macros"] } # version should match rocket
titlecase = "3.0"

[build-dependencies]
time = { version = "0.3.34", features = [] } # version should match above

[dev-dependencies.regex]
version = "1.10"
default-features = false
features = ["std"]
